Remove English copy from one Finnish translation
In addition, update the access token translation.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-30 20:35+0200\n"
+"POT-Creation-Date: 2020-11-30 21:12+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -3212,17 +3212,10 @@ msgid ""
 "\t\t\t"
 msgstr ""
 "\n"
-"\t\t\tMoreover, we send this service a so-called <a href=\"https://en."
-"wikipedia.org/wiki/Access_token\" rel=\"noopener nofollow\" target=\"_blank"
-"\" class=\"alert-link\">access token</a>, which gives the service access to "
-"the %(brand)s API at your privilege level.\n"
-"\t\t\tIf you don't want that to happen, please contact %(brand)s "
-"administration.\n"
-"\t\t\t \n"
 "\t\t\tLisäksi palvelulle lähetetään <a href=\"https://en.wikipedia.org/wiki/"
 "Access_token\" rel=\"noopener nofollow\" target=\"_blank\" class=\"alert-link"
-"\">pääsyavain</a>, joka mahdollistaa palvelun pääsyn %(brand)s:n API:n sinun "
-"oikeuksillasi.\n"
+"\">käyttöoikeustietue</a>, joka mahdollistaa palvelun pääsyn %(brand)s:n API:"
+"in sinun oikeuksillasi.\n"
 "\t\t\tMikäli näin ei pitäisi tapahtua, niin ota yhteyttä %(brand)s:n "
 "ylläpitoon.\n"
 "\t\t\t"
@@ -3245,8 +3238,8 @@ msgstr ""
 "\n"
 "\t\t\t\tLisäksi palvelulle lähetetään <a href=\"https://en.wikipedia.org/"
 "wiki/Access_token\" rel=\"noopener nofollow\" target=\"_blank\" class="
-"\"alert-link\">pääsyavain</a>, joka mahdollistaa palvelun pääsyn %(brand)s:n "
-"API:n sinun oikeuksillasi.\n"
+"\"alert-link\">käyttöoikeustietue</a>, joka mahdollistaa palvelun pääsyn "
+"%(brand)s:n API:in sinun oikeuksillasi.\n"
 "\t\t\t\tTämä tarkoittaa sitä, että palvelu voi mm. selvittää "
 "opiskelijanumerosi, nähdä kurssisuorituksiasi ja palauttaa tehtäviä "
 "puolestasi.\n"
