Change enrollment checks to use QuerySet get method.
Relies on the uniqueness of enrollments based on (course_instance, user_profile).
Requires exception handling for nonexisting entries.
In addition, HTTP error changed from PermissionDenied to NotFound when accessing
LTI service with unenrolled user.

Closes #600.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2908,6 +2908,10 @@ msgstr ""
 "Palauttaaksesi tehtäviä sinun pitää rekisteröityä ja ilmoittautua kurssin "
 "etusivulla."
 
+#: external_services/lti.py
+msgid "Course enrollment required for accessing the LTI service."
+msgstr "Kurssille ilmoittautuminen vaaditaan LTI-palveluun pääsemiseksi."
+
 #: external_services/models.py
 msgid "Url can not contain scheme or domain part."
 msgstr "Url ei voi sisältää skeema- tai verkkotunnusosaa."
