Add a hidden link to open exercises in a new tab / full-page
Aplus does not support keyboard navigation for modal windows, and all
the current exercises use modal windows for different tasks, e.g., show
model response, inspect submission among other tasks. Therefore, the
exercises must be opened in full-page for users who use keyboard
navigation.

We added hidden links that are shown only when the user
navigates the course with the keyboard.

Fixes #669

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-02 11:46+0200\n"
+"POT-Creation-Date: 2021-01-25 10:17+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -2436,6 +2436,14 @@ msgstr "Tutki palautusta"
 #: exercise/templates/exercise/exercise_plain.html
 msgid "View all submissions"
 msgstr "Näytä kaikki palautukset"
+
+#: exercise/templates/exercise/exercise_plain.html
+msgid ""
+"Open this exercise in a new tab (recommended for keyboard and assistive "
+"technology users)"
+msgstr ""
+"Avaa tämä tehtävä uudessa välilehdessä (suositellaan näppäimistön ja "
+"avustavan teknologian käyttäjille)"
 
 #: exercise/templates/exercise/exercise_plain.html
 #, python-format
