Convert "show older assignments" link into button
According to the accessibility audit report
(https://apluslms.github.io/accessibility-audit/), links should be used
for navigation and buttons should be used for actions on the current
page. Therefore the "show older assignments" link should be a button.

Related to #598

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2389,7 +2389,7 @@ msgid "Filter view"
 msgstr "Piilota näkymästä"
 
 #: exercise/templates/exercise/_user_results.html
-msgid "Show older assignments."
+msgid "Show older assignments"
 msgstr "Näytä vanhemmat tehtävät"
 
 #: exercise/templates/exercise/_user_results.html
